--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1248,6 +1248,7 @@ General Styles - Owlcarousel
   letter-spacing: 3px;
   font-size: 11px;
   transition: background, padding 0.4s ease-in-out 0s;
+  min-height: 70px;
 }
 
 .navbar a {
